[metadata]
name = camimporter
summary = Camera importer/organizer tool.
description-file = README
license = Apache License, Version 2.0
author = fmount
author-email = francesco.pan001@gmail.com
classifier =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 2.7
keywords = photo organize importer

[files]
packages = camimporter
extra-files = camimporter/config/parameters.json

[entry_points]
console_scripts =
    camimporter = camimporter.cli:cli

[pbr]
autodoc_index_modules = True


[wheel]
universal = 1
