[metadata]
name = camimporter
summary = Camera importer/organizer tool.
description-file = README.md
license = MIT
author = fmount
author-email = fpantano@redhat.com
classifier =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
keywords = photo organize importer

[sdist]
keep-temp = 1
dist-dir = dist/source

[files]
packages = camimporter
extra-files = camimporter/config/parameters.json

[entry_points]
console_scripts =
    camimporter = camimporter.cli:cli

[pbr]
autodoc_index_modules = True


[wheel]
universal = 1
